--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+* {
+  max-width: 100%;
+  scroll-behavior: smooth;
+  text-decoration: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
