--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,10 @@ code {
   box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
   cursor: pointer;
 }
+
+footer{
+  position: static;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
