--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,16 @@ footer{
   bottom: 0;
   width: 100%;
 }
+
+/* Footer animation and styles */
+/* Transition-in*/
+footer #links {
+  box-shadow: inset 0 0 0 0 #000000;
+  transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+}
+
+/* Transition-out */
+footer #links:hover {
+  color: white !important;
+  box-shadow: inset 200px 0 0 0 black;   
+}
