--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,14 @@ footer #links:hover {
   color: white !important;
   box-shadow: inset 200px 0 0 0 black;   
 }
+/* Custom sidebar for User's home pages */
+.sidebar {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  min-height: 100vh !important;
+  z-index: 100;
+  padding: 48px 0 0;
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .5);
+}
