--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,7 @@ footer #links:hover {
   padding: 48px 0 0;
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .5);
 }
+
+.editor {
+  box-shadow: 20px 30px 50px 10px rgb(73, 68, 69, .1);
+}
